# ocaml-gif

./: LICENSE  README.md  dune-project  giflib.opam
.github/: CODE_OF_CONDUCT.md
.github/workflows/: main.yml
doc/: index.mld
gif/: dune  gIF.ml  gifLzw.ml  lazyList.mli
giflib/: colorTable.ml  colorTable.mli  dune  gIF.ml  gIF.mli  gifLzw.ml  gifLzw.mli  image.ml  image.mli  lazyList.ml  lazyList.mli  lzw.ml  lzw.mli
test/: dune  test_gif.ml  test_lzw.ml
